--- a/api/package.json
+++ b/api/package.json
@@ -4,11 +4,13 @@
   "description": "Apedido de melissa do RH",
   "main": "index.js",
   "scripts": {
+    "migrate": "db-migrate up",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bruno",
   "license": "ISC",
   "dependencies": {
+    "db-migrate": "^0.11.13",
     "express": "^4.18.2",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
